Scrollbar fix

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -324,7 +324,7 @@ form {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow: scroll;
+    overflow-x: scroll;
     margin-top: 10px;
 
     .trending__profile {
